# recipes

./: .env  Cargo.toml  Justfile  README.md  Shuttle.toml  diesel.toml
.github/workflows/: ci.yml
crates/recipe-app/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  tailwind.config.js
crates/recipe-app/public/: tailwind.css
crates/recipe-app/src/: components.rs  hooks.rs  lib.rs  server.rs  server_functions.rs
crates/recipe-app/src/components/: header.rs  meal_plans.rs  recipes.rs  scraped.rs
crates/recipe-app/src/server/: functions.rs  state.rs
crates/recipe-client/: Cargo.toml  build.rs  schema.graphql
crates/recipe-client/src/: lib.rs
crates/recipe-client/src/snapshots/: recipe_client__tests__all_recipes_query_gql_output.snap  recipe_queries__tests__all_recipes_query_gql_output.snap.new
crates/recipe-db/: Cargo.toml
crates/recipe-db/migrations/2022-12-29-091916_initial-migration/: down.sql  up.sql
crates/recipe-db/migrations/2023-12-20-224803_add-image-url/: down.sql  up.sql
crates/recipe-db/src/: dsl.rs  lib.rs  schema.rs  traits.rs
crates/recipe-db/src/models/: ingredient.rs  measurement.rs  recipe.rs  recipe_ingredient.rs
crates/recipe-desktop/: Cargo.toml  public
crates/recipe-desktop/src/: main.rs
crates/recipe-graphql/: Cargo.toml
crates/recipe-graphql-axum/: Cargo.toml
crates/recipe-graphql-axum/src/: main.rs
crates/recipe-graphql/src/: lib.rs  types.rs
crates/recipe-graphql/src/types/: ingredient.rs  measurement.rs  recipe.rs  recipe_ingredient.rs  scraped_recipe.rs
crates/recipe-ios/: Cargo.toml  mobile.toml
crates/recipe-ios/src/: lib.rs  main.rs
crates/recipe-repository/: Cargo.toml
crates/recipe-repository/src/: lib.rs  recipe.rs
crates/recipe-scrape/: Cargo.toml
crates/recipe-scrape/src/: ingredient.rs  lib.rs  main.rs  scraper.rs  scrapers.rs
crates/recipe-scrape/src/scraper/: bbc_good_food.rs
crates/recipe-scrape/src/scrapers/: bbc_good_food.rs
crates/recipe-server/: Cargo.toml
crates/recipe-server/src/: lib.rs  main.rs
crates/recipe-shared/: Cargo.toml
crates/recipe-shared/src/: lib.rs
crates/recipe-shuttle/: Cargo.toml
crates/recipe-shuttle/src/: lib.rs  main.rs  pg_pool.rs  service_info.rs
crates/recipe-web/: .gitignore  Cargo.toml  Dioxus.toml  Trunk.toml  build.rs  index-prod.html  index.html
crates/recipe-web/src/: lib.rs  main.rs
