[workspace]
members = [
  "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
repository = "https://github.com/sd2k/recipes"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0.79"
async-trait = "0.1.76"
axum = "0.6.1"
bigdecimal = "0.4.1"
chrono = "0.4.23"
diesel = "2.0.2"
diesel-async = "0.4.1"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-router = "0.4.0"
dioxus-ssr = "0.4.0"
dioxus-web = "0.4.0"
futures-util = "0.3.25"
recipe-app = { path = "crates/recipe-app" }
recipe-db = { path = "crates/recipe-db" }
recipe-desktop = { path = "crates/recipe-desktop" }
recipe-ios = { path = "crates/recipe-ios" }
recipe-repository = { path = "crates/recipe-repository" }
recipe-scrape = { path = "crates/recipe-scrape" }
recipe-server = { path = "crates/recipe-server" }
recipe-shared = { path = "crates/recipe-shared" }
recipe-shuttle = { path = "crates/recipe-shuttle" }
recipe-web = { path = "crates/recipe-web" }
reqwest = { version = "0.11.23", default-features = false }
serde = "1.0.190"
serde_json = "1.0.94"
thiserror = "1.0.53"
tokio = "1.22.0"
tower = "0.4.13"
tower-http = "0.4.4"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.16"
url = "2.3.1"

[profile.release-web]
inherits = "release"
lto = true
opt-level = 'z'
strip = true
codegen-units = 1

[patch.crates-io]
dioxus = { git = "https://github.com/sd2k/dioxus" }
dioxus-desktop = { git = "https://github.com/sd2k/dioxus" }
dioxus-fullstack = { git = "https://github.com/sd2k/dioxus" }
dioxus-router = { git = "https://github.com/sd2k/dioxus" }
dioxus-ssr = { git = "https://github.com/sd2k/dioxus" }
dioxus-web = { git = "https://github.com/sd2k/dioxus" }
dioxus-html-macro = { git = "https://github.com/sd2k/dioxus-html-macro", branch = "syn-2-dioxus-0.4" }
