[package]
name = "recipe-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dioxus = { workspace = true }
dioxus-fullstack = { version = "0.4.1" }
log = "0.4.17"
recipe-repository = { workspace = true, optional = true }
recipe-scrape = { workspace = true }
recipe-shared = { workspace = true }
serde = { workspace = true }
