[package]
name = "recipe-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dioxus.workspace = true
dioxus-daisyui = "0.4.0"
dioxus-fullstack = { version = "0.4.1" }
log = "0.4.17"
recipe-db = { workspace = true, optional = true }
recipe-repository = { workspace = true, optional = true }
recipe-scrape.workspace = true
recipe-shared.workspace = true
serde.workspace = true
tracing.workspace = true

[features]
default = []
ssr = ["recipe-db", "recipe-repository", "recipe-scrape/scraper"]
