[package]
name = "recipe-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dioxus.workspace = true
dioxus-daisyui = "0.4.0"
dioxus-fullstack = { version = "0.4.1" }
dioxus-html-macro = "0.3.0"
dioxus-query = "0.4.0"
dioxus-router.workspace = true
log = "0.4.22"
recipe-db = { workspace = true, optional = true }
recipe-repository = { workspace = true, optional = true }
recipe-scrape.workspace = true
recipe-shared.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true

[features]
default = []
ssr = ["recipe-db", "recipe-repository", "recipe-scrape/scraper"]
