[package]
name = "recipe-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
derive_more = "0.99.17"
diesel = { workspace = true, features = ["chrono", "numeric", "postgres"] }
diesel-async = { workspace = true, features = ["deadpool", "postgres"] }
diesel-derive-newtype = "2.0.0"
dotenvy = "0.15.6"
