[package]
name = "recipe-repository"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
diesel.workspace = true
futures-util.workspace = true
recipe-db.workspace = true
recipe-shared.workspace = true
thiserror.workspace = true
