[package]
name = "recipe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
dioxus.workspace = true
dioxus-fullstack = { version = "0.4.1", features = ["axum", "router"] }
dioxus-ssr.workspace = true
dioxus-web.workspace = true
recipe-app = { workspace = true, features = ["ssr"] }
recipe-db = { workspace = true }
recipe-repository = { workspace = true }
recipe-shared = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "trace"]}
tracing.workspace = true
tracing-error = { workspace = true, features = ["traced-error"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
