[package]
name = "recipe-shared"
description = "Shared DTOs for the recipe workspace"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
