[package]
name = "recipe-web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["web"] }
dioxus-logger = "0.3.0"
getrandom = { version = "0.2.8", features = ["js"] }
log = "0.4.17"
recipe-app = { workspace = true }
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"], optional = true }
web-sys = "0.3.60"

[features]
embed = ["rust-embed"]

# Commented out because building/compiling to WASM doesn't currently work inside shuttle.
# [build-dependencies]
# anyhow = { workspace = true }
# tokio = { workspace = true, features = ["full"] }
# trunk = { git = "https://github.com/sd2k/trunk", branch = "add-lib" }
